# EdgeBench

./: .gitignore  README.md  pyproject.toml
2607.05155/: 00README.json  bytedance_seed.cls  main.bib  paper.bbl  paper.tex
2607.05155/sections/: acknowledgements.tex  additional_relatedwork.tex  appendix.tex  approach.tex  conclusion.tex  construction.tex  emerging_scaling.tex  evaluation_hacking.tex  experiments.tex  gw_case_study_details.tex  harness_level_continuation_ablations.tex  introduction.tex  relatedwork.tex  scaling.tex  scaling_law_discussion.tex  serving_api_stability.tex  task_by_task_specifications.tex  theory.tex
2607.05155/tables/: ablations.tex  category_score_tables.tex  leaderboard_table.tex
docs/en/configuration/: container-backends.md  experiments.md
docs/en/examples/: all-tasks-k8s.md  single-task-docker.md
docs/en/guide/: getting-started.md
docs/zh/configuration/: container-backends.md  experiments.md
docs/zh/examples/: all-tasks-k8s.md  single-task-docker.md
docs/zh/guide/: getting-started.md
examples/all-tasks-k8s/: README.md  experiment-codex.yaml  experiment-deepseek.yaml  experiment-glm.yaml  experiment.yaml
examples/single-task-docker/: README.md
harbor_tasks/openrct2_theme_park_ai/: instruction.md  task.toml
harbor_tasks/openrct2_theme_park_ai/tests/: Dockerfile  test.sh  write_reward.py
harbor_tasks/openttd_transport_ai/: instruction.md  task.toml
harbor_tasks/openttd_transport_ai/tests/: Dockerfile  test.sh  write_reward.py
